Implement ObjectField.flatMap